--- a/src/styles/homeComponents/HeroSection.css
+++ b/src/styles/homeComponents/HeroSection.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: left;
     height: 100vh;
+    width: auto;
     background: center/cover no-repeat;
     position: relative;
     padding: 2rem;
