--- a/src/styles/homeComponents/Carousel.css
+++ b/src/styles/homeComponents/Carousel.css
@@ -24,7 +24,7 @@
     align-items: center;
     bottom: -50px; 
     color: white;
-    width: 80%; 
+    width: 100%; 
     padding: 20px;
     border-radius: 8px;
     text-align: center;
@@ -33,7 +33,7 @@
   }
   
   .carousel-text h1 {
-    font-size: 2.5rem; 
+    font-size: 3rem; 
     width: 70%; 
     margin: 0 auto; 
     line-height: 1.2; 
@@ -55,6 +55,10 @@
     border-bottom: 2px solid #ffc107;
     font-size: 1rem;
     text-align: center;
+  }
+
+  .carousel-text .shop-now:hover{
+    font-size: 1.1rem;
   }
   
   .carousel button {
@@ -80,11 +84,10 @@
   
   @keyframes slide-up {
     0% {
-      bottom: -50px;
+      bottom: -200px;
       opacity: 0;
     }
     100% {
-      bottom: 20px;
       opacity: 1;
     }
   }
@@ -97,6 +100,15 @@
     .carousel-text h1 {
       font-size: 2rem;
       width: 90%; 
+    }
+
+    .carousel-inner{
+        transition: none;
+    }
+
+    .carousel-text{
+        animation: none;
+        opacity: 1;
     }
   
     .carousel-text .shop-now {
