--- a/src/styles/homeComponents/HeroSection.css
+++ b/src/styles/homeComponents/HeroSection.css
@@ -33,7 +33,7 @@
     padding: 12px 24px;
     font-size: 1rem;
     background-color: #ffc107;
-    color: black;
+    color: rgb(255, 255, 255);
     border: none;
     border-radius: 4px;
     cursor: pointer;
