--- a/src/styles/homeComponents/FeaturedProducts.css
+++ b/src/styles/homeComponents/FeaturedProducts.css
@@ -22,30 +22,32 @@
   .carousel-control {
     background: #ffc107;
     border: none;
-    padding: 10px;
     cursor: pointer;
     margin: 1rem;
+    font-size: 2rem;
     color: #fff;
-    border-radius: 4px;
+    border-radius: 50%;
+  }
+
+  .carousel-control:hover{
+    background: #ffc10784;
   }
   
   .product-list {
     display: flex;
     gap: 20px;
     flex-wrap: nowrap;
-    overflow: hidden; /* Prevent items outside the visible area */
-    width: calc(4 * 220px);
   }
   
   .product-card {
-    flex: 0 0 200px; 
+    flex: 0 0 auto;
     width: 200px;
     background: #fff;
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 10px;
     text-align: center;
-    position: relative;
+    position: relative; 
   }
   
   .product-card .label {
@@ -62,11 +64,38 @@
   }
   
   .label.new {
-    background: #0f4e1d;
+    background: #1f5422;
   }
   
   .label.sale {
     background: #ff4d4d;
+  }
+
+  .buy-icons{
+    display: flex;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    justify-content: space-evenly;
+    align-items: center;
+    cursor: pointer;
+  }
+
+  .cart-text{
+    display: flex;
+    font-size: 0.8rem;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .buy-icons img{
+    width: 1.5rem;
+    height: 1.5rem;
+    cursor: pointer;
+  }
+
+  .buy-icons img:hover{
+    width: 2rem;
+    height: 2rem;
   }
   
   .product-image {
@@ -102,12 +131,8 @@
   
   /* Responsive design */
   @media (max-width: 768px) {
-    .product-carousel {
-      flex-direction: column;
-    }
-  
     .carousel-control {
-      display: none;
+        font-size: 1.5rem;
     }
   
     .product-list {
@@ -115,7 +140,6 @@
     }
   
     .product-card {
-      width: 100%;
       margin-bottom: 20px;
     }
   }
