--- a/src/styles/homeComponents/FeaturedProducts.css
+++ b/src/styles/homeComponents/FeaturedProducts.css
@@ -11,6 +11,23 @@
     display: inline-block;
     border-bottom: 4px solid #ffc107;
   }
+
+  .view-more{
+    display: inline-block;
+    padding: 12px 24px;
+    font-size: 1rem;
+    background-color: #ffc107;
+    color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-top: 2rem;
+  }
+
+  .view-more:hover{
+    background: #e0a800;
+  }
   
   .product-carousel {
     display: flex;
