--- a/src/styles/homeComponents/FeaturedProducts.css
+++ b/src/styles/homeComponents/FeaturedProducts.css
@@ -1,6 +1,8 @@
 .featured-products {
     text-align: center;
     padding: 20px;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
   }
   
   .featured-products h2 {
@@ -33,6 +35,7 @@
     display: flex;
     align-items: center;
     overflow: hidden;
+    height: 500px;
     justify-content: center;
   }
   
@@ -50,14 +53,14 @@
     background: #ffc10784;
   }
   
-  .product-list {
+  .featured-product-list {
     display: flex;
     gap: 20px;
     flex-wrap: nowrap;
   }
   
-  .product-card {
-    flex: 0 0 auto;
+  .featured-product-card {
+    flex: 1 1 280px;
     width: 200px;
     background: #fff;
     border: 1px solid #ddd;
@@ -65,16 +68,29 @@
     padding: 10px;
     text-align: center;
     position: relative; 
+    cursor: pointer;
+    max-width: 300px;
+    transition: transform 0.3s ease;
+  }
+
+
+  .featured-product-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+  }
+
+  .featured-product-card:hover .product-image {
+    transform: rotateY(180deg);
   }
   
-  .product-card .label {
+  .featured-product-card .label {
     position: absolute; 
     top: 10px; 
     left: 10px; 
     padding: 5px 10px;
     margin: 1rem;
     border-radius: 4px;
-    font-size: 12px;
+    font-size: 0.8rem;
     font-weight: bold;
     color: #fff;
     z-index: 1;
@@ -115,7 +131,7 @@
     height: 2rem;
   }
   
-  .product-image {
+  .featured-product-image {
     max-width: 100%;
     height: auto;
     margin-bottom: 10px;
@@ -152,11 +168,11 @@
         font-size: 1.5rem;
     }
   
-    .product-list {
+    .featured-product-list {
       gap: 10px;
     }
   
-    .product-card {
+    .featured-product-card {
       margin-bottom: 20px;
     }
   }
