--- a/src/styles/components/Navbar.css
+++ b/src/styles/components/Navbar.css
@@ -116,19 +116,24 @@
   
     .navbar-links {
       display: none;
+      border-radius: 16px;
       flex-direction: column;
       position: absolute;
-      top: 50px;
-      left: 0;
-      width: 100%;
+      top: 80px;
+      right: 10px;
+      width: 80%;
       background-color: rgb(255, 255, 255);
-      padding: 10px 20px;
+      padding: 1rem;
       box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     }
   
     .navbar-links.open {
       display: flex;
       z-index: 1;
+    }
+
+    .navbar-links li a{
+      color: #000000;
     }
   
     .navbar-actions {
