--- a/src/styles/pages/ContactUs.css
+++ b/src/styles/pages/ContactUs.css
@@ -132,8 +132,34 @@
     }
 
     .contact-text{
-        width: 70%;
+        width: 80%;
         align-self: center;
+        gap: 20px;
+    }
+
+    .contact-details{
+        border: 1px solid #ffc107;
+    }
+
+    .contact-form{
+        border: 1px solid #ffc107;
+    }
+
+    .contact-form h2{
+        font-size: 1.5rem;
+        margin-bottom: 20px;
+    }
+
+    .contact-details h2{
+        font-size: 1.5rem;
+    }
+
+    .contact-details p{
+        font-size: 1rem;
+    }
+
+    .contact-form button{
+        width: 100%;
     }
 
   }
