--- a/src/styles/aboutComponents/ImageGallery.css
+++ b/src/styles/aboutComponents/ImageGallery.css
@@ -3,6 +3,8 @@
     font-family: Arial, sans-serif;
     text-align: center;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
   }
   
   .quote-section {
@@ -60,6 +62,7 @@
     .image-grid {
       grid-template-columns: repeat(1, 1fr);
       padding: 1rem;
+      align-self: center;
     }
   
     .quote {
