--- a/src/styles/components/Footer.css
+++ b/src/styles/components/Footer.css
@@ -1,155 +1,182 @@
 .footer {
-    background-color: #ffffff;
-    font-family: Arial, sans-serif;
-  }
-  
-  .footer-top {
-    display: flex;
-    justify-content: space-evenly;
-    padding: 1rem;
-    flex-wrap: wrap;
-    border-bottom:1px solid  #ffcc00;
-  }
-  
-  .footer-feature {
-    text-align: left;
-    align-items: center;
-    gap: 10px;
-    display: flex;
-    margin: 10px;
-  }
-  
+  background-color: #ffffff;
+  font-family: Arial, sans-serif;
+}
 
-  .footer-feature .footer-image{
-    width: 2rem;
-    height: 2rem;
+.footer-top {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 1rem;
+  flex-wrap: wrap;
+  border-bottom:1px solid  #ffcc00;
+}
 
-    padding: 1rem;
-    border: 1px solid #ffcc00;
+.footer-feature {
+  text-align: left;
+  align-items: center;
+  gap: 10px;
+  display: flex;
+  margin: 10px;
+}
+
+
+.footer-feature .footer-image{
+  width: 2rem;
+  height: 2rem;
+
+  padding: 1rem;
+  border: 1px solid #ffcc00;
+}
+
+.footer-feature span {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 0.8rem;
+}
+
+.footer-feature a {
+  color: #000000;
+  text-decoration: underline;
+  font-size: 0.8rem;
+}
+
+.footer-feature a:hover {
+  color: #333;
+}
+
+.footer-bottom {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 2rem;
+}
+
+.footer-section {
+  flex: 1;
+  min-width: 200px;
+  margin: 10px;
+}
+
+.footer-section h4 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.footer-section ul {
+  font-size: 0.8rem;
+  line-height: 20px;
+  list-style: none;
+  padding: 0;
+}
+
+.footer-section ul li {
+  margin-bottom: 5px;
+}
+
+.footer-section ul li a {
+  color: #333;
+  text-decoration: none;
+}
+
+.footer-section ul li a:hover {
+  text-decoration: underline;
+}
+
+.newsletter-form {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+
+.newsletter-form input {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+}
+
+.newsletter-form button {
+  background-color: #ffcc00;
+  color: #fff;
+  border: none;
+  padding: 10px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.newsletter-form button:hover {
+  background-color: #e0a800;
+}
+
+
+@keyframes dramaticEntrance {
+  0% {
+    transform: scale(0.5) translateY(50px);
+    opacity: 0;
   }
-  
-  .footer-feature span {
-    display: block;
-    margin-bottom: 5px;
-    font-size: 0.8rem;
+  50% {
+    transform: scale(1.2) translateY(-20px);
+    opacity: 0.8;
   }
-  
-  .footer-feature a {
-    color: #000000;
-    text-decoration: underline;
-    font-size: 0.8rem;
+  100% {
+    transform: scale(1) translateY(0);
+    opacity: 1;
   }
-  
-  .footer-feature a:hover {
-    color: #333;
-  }
-  
-  .footer-bottom {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    padding: 2rem;
-  }
-  
+}
+
+.footer-feature {
+  opacity: 0;
+  transform: scale(0.5) translateY(50px);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.footer-feature.animate {
+  animation: dramaticEntrance 1s ease forwards; 
+}
+
+
+@media (max-width: 768px) {
   .footer-section {
-    flex: 1;
-    min-width: 200px;
-    margin: 10px;
+    text-align: left;
   }
-  
+
+  .footer-top{
+      justify-content: flex-start;
+  }
+
   .footer-section h4 {
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
-  
-  .footer-section ul {
-    font-size: 0.8rem;
-    line-height: 20px;
-    list-style: none;
-    padding: 0;
-  }
-  
-  .footer-section ul li {
-    margin-bottom: 5px;
-  }
-  
-  .footer-section ul li a {
-    color: #333;
-    text-decoration: none;
-  }
-  
-  .footer-section ul li a:hover {
-    text-decoration: underline;
-  }
-  
-  .newsletter-form {
     display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-  }
-
-  
-  .newsletter-form input {
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 14px;
-  }
-  
-  .newsletter-form button {
-    background-color: #ffcc00;
-    color: #fff;
-    border: none;
-    padding: 10px;
-    border-radius: 4px;
+    justify-content: space-between;
+    align-items: center;
     cursor: pointer;
-  }
-  
-  .newsletter-form button:hover {
-    background-color: #e0a800;
+    margin: 0;
   }
 
-  @media (max-width: 768px) {
-    .footer-section {
-      text-align: left;
-    }
-
-    .footer-top{
-        justify-content: flex-start;
-    }
-  
-    .footer-section h4 {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      cursor: pointer;
-      margin: 0;
-    }
-  
-    .footer-section ul {
-      max-height: 0;
-      overflow: hidden;
-      transition: max-height 0.3s ease;
-      font-size: 1rem;
-    }
-  
-    .footer-section.open ul {
-      max-height: 200px;
-    }
-  
-    .footer-section h4::after {
-      content: '\25B6'; 
-      font-size: 12px;
-      color: #767676;
-      transform: rotate(0);
-      transition: transform 0.3s ease;
-    }
-  
-    .footer-section.open h4::after {
-      transform: rotate(90deg);
-    }
-
-    .footer-section.news-letter h4::after {
-      display: none;
-    }
+  .footer-section ul {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease;
+    font-size: 1rem;
   }
+
+  .footer-section.open ul {
+    max-height: 200px;
+  }
+
+  .footer-section h4::after {
+    content: '\25B6'; 
+    font-size: 12px;
+    color: #767676;
+    transform: rotate(0);
+    transition: transform 0.3s ease;
+  }
+
+  .footer-section.open h4::after {
+    transform: rotate(90deg);
+  }
+
+  .footer-section.news-letter h4::after {
+    display: none;
+  }
+}
