--- a/src/styles/homeComponents/FeaturedProducts.css
+++ b/src/styles/homeComponents/FeaturedProducts.css
@@ -1,6 +1,5 @@
 .featured-products {
     text-align: center;
-    padding: 20px;
     margin-top: 1rem;
     margin-bottom: 3rem;
   }
@@ -73,10 +72,10 @@
   
   .product-carousel {
     display: flex;
-    align-items: center;
     overflow: hidden;
-    height: 500px;
-    justify-content: center;
+    position: relative;
+    margin-bottom: 1rem;
+    padding: 2rem;
   }
   
   .carousel-control {
@@ -96,11 +95,21 @@
   .featured-product-list {
     display: flex;
     gap: 20px;
-    flex-wrap: nowrap;
+    animation: scroll-banner 20s linear infinite;
+ 
+  }
+
+  @keyframes scroll-banner {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-50%);
+    }
   }
   
   .featured-product-card {
-    flex: 1 1 280px;
+    flex: 0 0 auto;
     width: 200px;
     background: #fff;
     border: 1px solid #ddd;
@@ -110,6 +119,7 @@
     position: relative; 
     cursor: pointer;
     max-width: 300px;
+    position: relative;
     transition: transform 0.3s ease;
   }
 
@@ -121,6 +131,10 @@
 
   .featured-product-card:hover .product-image {
     transform: rotateY(180deg);
+  }
+
+  .featured-product-list:hover {
+    animation-play-state: paused;
   }
   
   .featured-product-card .label {
